syntax="proto3";
message Cashflow{
   double interest_amount = 1;
   double principal_amount = 2;
   int64 date = 3;
}
message Account{
 string account_number = 1;
 double disbursed_amt = 2;
 double os_loan_bal_local_currency = 3;
 double curr_applicable_interest_rate = 4;
 double ei_amount_current = 5;
 string interest_type = 6;
 double os_p_bal_due_local_currency = 7;
 double os_i_bal_due_local_currency = 8;
 double ei_amt_paid_advance_local_curr = 9;
 double pre_ei_bal_local_curr = 10;
 int64 account_open_value_date = 11;
 int64 maturity_date = 12;
 int64 ei_start_date_current = 13;
 int64 ei_end_date_current = 14;
 string ei_payment_frequency_current = 15;
 int64 emi_last_paid_date_current = 16;
 string ei_payment_day = 17;
 string ei_orginal_term = 18;
 string ei_balance_term = 19;
 string repricing_benchmark = 20;
 string spread = 21;
 int64 last_repricing_date = 22;
 int64 next_repricing_date = 23;
 string repricing_frequency = 24;
 int64 number_ei_structures = 25;
 string npa_classification = 26;
 string remark = 27;
 string months_os_comb = 28;
 string moratorium_type = 29;
 int64 from_moratorium_date = 30;
 int64 to_moratorium_date = 31;
 string recalculate_ei_amount_flag = 32;
 string moratorium_interest_calculation = 33;
 string bullet_payment_flag = 34;
 string restructured_flag = 35;
 string residential_mortgage = 36;
 string risk_weight = 37;
 string internal_rating = 38;
 string external_rating = 39;
 string contractual_tenor = 40;
 string residual_tenor = 41;
 string customer_constitution_code = 42;
 string product_code = 43;
 string p_gl_code = 44;
 string m_npa_classification = 45;
 string accrued_interest = 46;
 string customer_id = 47;
 string customer_name = 48;
 string group_id = 49;
 string group_name = 50;
 string branch_code = 51;
 string sector = 52;
 string industry = 53;
 string ltv = 54;
 string overdue_account = 55;
 string excess_account = 56;
 string loan_type = 57;
 string residual_interest = 58;
 string currency = 59;
 double hdfc_ltd_percentage = 60;
 double securitization_percentage = 61;
 string overdue_type = 62;
 string alm_line = 63;
 string structure_number = 64;
 double memi = 65;
 double ost_bal = 66;
 double roi = 67;
 int64 asondate = 68;
 int64 emi_overdue_gl_cd = 69;
 int64 pre_emi_overdue_gl_cd = 70;
 int64 excess_emi_gl_cd = 71;
 int64 excess_pre_emi_gl_cd = 72;
 double tot_prin_amt = 73;
 double tot_int_amt = 74;
 string sma_flag = 75;
 repeated Cashflow cashflows = 76;
}
